Also generate GraphViz graphz

--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,9 @@ description:         Please see the README on GitHub at <https://github.com/nqpz
 
 dependencies:
 - base >= 4.7 && < 5
+- fgl >= 5.8
+- graphviz >= 2999.20
+- text >= 2.0
 
 library:
   source-dirs: src
